vendor/libnspire-sys/libnspire/src/api/dir.h

enum nspire_dir_type {
	NSPIRE_FILE	= 0,
	NSPIRE_DIR	= 1
};
struct nspire_dir_item {
	char name[240];
	uint64_t size, date;
	enum nspire_dir_type type;
};
struct nspire_dir_info {
	uint64_t num;
	struct nspire_dir_item items[];
};
int nspire_dirlist(nspire_handle_t *, const char *, struct nspire_dir_info **);
void nspire_dirlist_free(struct nspire_dir_info *d);
int nspire_dir_create(nspire_handle_t *handle, const char *path);
int nspire_dir_delete(nspire_handle_t *handle, const char *path);
int nspire_attr(nspire_handle_t *, const char *, struct nspire_dir_item *);