vendor/libnspire-sys/libnspire/src/api/file.h

typedef void (*nspire_callback)(size_t, void*);
int nspire_file_write(nspire_handle_t *, const char *, void*, size_t, nspire_callback cb, void *cb_data);
int nspire_file_read(nspire_handle_t *handle, const char *path,
		void* data, size_t size, size_t *read_bytes, nspire_callback cb, void *cb_data);
int nspire_file_move(nspire_handle_t *handle, const char *src, const char *dst);
int nspire_file_copy(nspire_handle_t *handle, const char *src, const char *dst);
int nspire_file_delete(nspire_handle_t *handle, const char *path);