vendor/libnspire-sys/libnspire/src/api/screenshot.h

struct nspire_image {
	uint16_t width, height;
	uint8_t bbp;

	unsigned char data[];
};
int nspire_screenshot(nspire_handle_t *handle, struct nspire_image **ptr);