vendor/libnspire-sys/src/bindings.rs

#[test]
fn bindgen_test_layout_nspire_devinfo() {
    assert_eq!(
        ::std::mem::size_of::<nspire_devinfo>(),
        136usize,
        concat!("Size of: ", stringify!(nspire_devinfo))
    );
    assert_eq!(
        ::std::mem::align_of::<nspire_devinfo>(),
        8usize,
        concat!("Alignment of ", stringify!(nspire_devinfo))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<nspire_devinfo>())).storage as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(nspire_devinfo),
            "::",
            stringify!(storage)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<nspire_devinfo>())).ram as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(nspire_devinfo),
            "::",
            stringify!(ram)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<nspire_devinfo>())).versions as *const _ as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(nspire_devinfo),
            "::",
            stringify!(versions)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<nspire_devinfo>())).hw_type as *const _ as usize },
        44usize,
        concat!(
            "Offset of field: ",
            stringify!(nspire_devinfo),
            "::",
            stringify!(hw_type)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<nspire_devinfo>())).batt as *const _ as usize },
        48usize,
        concat!(
            "Offset of field: ",
            stringify!(nspire_devinfo),
            "::",
            stringify!(batt)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<nspire_devinfo>())).clock_speed as *const _ as usize },
        56usize,
        concat!(
            "Offset of field: ",
            stringify!(nspire_devinfo),
            "::",
            stringify!(clock_speed)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<nspire_devinfo>())).lcd as *const _ as usize },
        58usize,
        concat!(
            "Offset of field: ",
            stringify!(nspire_devinfo),
            "::",
            stringify!(lcd)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<nspire_devinfo>())).extensions as *const _ as usize },
        64usize,
        concat!(
            "Offset of field: ",
            stringify!(nspire_devinfo),
            "::",
            stringify!(extensions)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<nspire_devinfo>())).device_name as *const _ as usize },
        80usize,
        concat!(
            "Offset of field: ",
            stringify!(nspire_devinfo),
            "::",
            stringify!(device_name)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<nspire_devinfo>())).electronic_id as *const _ as usize },
        100usize,
        concat!(
            "Offset of field: ",
            stringify!(nspire_devinfo),
            "::",
            stringify!(electronic_id)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<nspire_devinfo>())).runlevel as *const _ as usize },
        128usize,
        concat!(
            "Offset of field: ",
            stringify!(nspire_devinfo),
            "::",
            stringify!(runlevel)
        )
    );
}
extern "C" {
    pub fn nspire_device_info(
        handle: *mut nspire_handle_t,
        i: *mut nspire_devinfo,
    ) -> ::std::os::raw::c_int;
}
pub type nspire_callback =
    ::std::option::Option<unsafe extern "C" fn(arg1: usize, arg2: *mut ::std::os::raw::c_void)>;
extern "C" {
    pub fn nspire_file_write(
        arg1: *mut nspire_handle_t,
        arg2: *const ::std::os::raw::c_char,
        arg3: *mut ::std::os::raw::c_void,
        arg4: usize,
        cb: nspire_callback,
        cb_data: *mut ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn nspire_file_read(
        handle: *mut nspire_handle_t,
        path: *const ::std::os::raw::c_char,
        data: *mut ::std::os::raw::c_void,
        size: usize,
        read_bytes: *mut usize,
        cb: nspire_callback,
        cb_data: *mut ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn nspire_file_move(
        handle: *mut nspire_handle_t,
        src: *const ::std::os::raw::c_char,
        dst: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn nspire_file_copy(
        handle: *mut nspire_handle_t,
        src: *const ::std::os::raw::c_char,
        dst: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn nspire_file_delete(
        handle: *mut nspire_handle_t,
        path: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
pub const nspire_dir_type_NSPIRE_FILE: nspire_dir_type = 0;
pub const nspire_dir_type_NSPIRE_DIR: nspire_dir_type = 1;
pub type nspire_dir_type = ::std::os::raw::c_uint;
#[repr(C)]
#[derive(Copy, Clone)]
pub struct nspire_dir_item {
    pub name: [::std::os::raw::c_char; 240usize],
    pub size: u64,
    pub date: u64,
    pub type_: nspire_dir_type,
}
#[test]
fn bindgen_test_layout_nspire_dir_item() {
    assert_eq!(
        ::std::mem::size_of::<nspire_dir_item>(),
        264usize,
        concat!("Size of: ", stringify!(nspire_dir_item))
    );
    assert_eq!(
        ::std::mem::align_of::<nspire_dir_item>(),
        8usize,
        concat!("Alignment of ", stringify!(nspire_dir_item))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<nspire_dir_item>())).name as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(nspire_dir_item),
            "::",
            stringify!(name)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<nspire_dir_item>())).size as *const _ as usize },
        240usize,
        concat!(
            "Offset of field: ",
            stringify!(nspire_dir_item),
            "::",
            stringify!(size)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<nspire_dir_item>())).date as *const _ as usize },
        248usize,
        concat!(
            "Offset of field: ",
            stringify!(nspire_dir_item),
            "::",
            stringify!(date)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<nspire_dir_item>())).type_ as *const _ as usize },
        256usize,
        concat!(
            "Offset of field: ",
            stringify!(nspire_dir_item),
            "::",
            stringify!(type_)
        )
    );
}
#[repr(C)]
pub struct nspire_dir_info {
    pub num: u64,
    pub items: __IncompleteArrayField<nspire_dir_item>,
}
#[test]
fn bindgen_test_layout_nspire_dir_info() {
    assert_eq!(
        ::std::mem::size_of::<nspire_dir_info>(),
        8usize,
        concat!("Size of: ", stringify!(nspire_dir_info))
    );
    assert_eq!(
        ::std::mem::align_of::<nspire_dir_info>(),
        8usize,
        concat!("Alignment of ", stringify!(nspire_dir_info))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<nspire_dir_info>())).num as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(nspire_dir_info),
            "::",
            stringify!(num)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<nspire_dir_info>())).items as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(nspire_dir_info),
            "::",
            stringify!(items)
        )
    );
}
extern "C" {
    pub fn nspire_dirlist(
        arg1: *mut nspire_handle_t,
        arg2: *const ::std::os::raw::c_char,
        arg3: *mut *mut nspire_dir_info,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn nspire_dirlist_free(d: *mut nspire_dir_info);
}
extern "C" {
    pub fn nspire_dir_create(
        handle: *mut nspire_handle_t,
        path: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn nspire_dir_delete(
        handle: *mut nspire_handle_t,
        path: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn nspire_attr(
        arg1: *mut nspire_handle_t,
        arg2: *const ::std::os::raw::c_char,
        arg3: *mut nspire_dir_item,
    ) -> ::std::os::raw::c_int;
}
pub const NSPIRE_ERR_SUCCESS: ::std::os::raw::c_uint = 0;
pub const NSPIRE_ERR_TIMEOUT: ::std::os::raw::c_uint = 1;
pub const NSPIRE_ERR_NOMEM: ::std::os::raw::c_uint = 2;
pub const NSPIRE_ERR_INVALID: ::std::os::raw::c_uint = 3;
pub const NSPIRE_ERR_LIBUSB: ::std::os::raw::c_uint = 4;
pub const NSPIRE_ERR_NODEVICE: ::std::os::raw::c_uint = 5;
pub const NSPIRE_ERR_INVALPKT: ::std::os::raw::c_uint = 6;
pub const NSPIRE_ERR_NACK: ::std::os::raw::c_uint = 7;
pub const NSPIRE_ERR_BUSY: ::std::os::raw::c_uint = 8;
pub const NSPIRE_ERR_EXISTS: ::std::os::raw::c_uint = 9;
pub const NSPIRE_ERR_NONEXIST: ::std::os::raw::c_uint = 10;
pub const NSPIRE_ERR_OSFAILED: ::std::os::raw::c_uint = 11;
pub const NSPIRE_ERR_MAX: ::std::os::raw::c_uint = 12;
pub type _bindgen_ty_5 = ::std::os::raw::c_uint;
extern "C" {
    pub fn nspire_strerror(error: ::std::os::raw::c_int) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn nspire_os_send(
        handle: *mut nspire_handle_t,
        data: *mut ::std::os::raw::c_void,
        size: usize,
        cb: nspire_callback,
        cb_data: *mut ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int;
}
#[repr(C)]
#[derive(Debug)]
pub struct nspire_image {
    pub width: u16,
    pub height: u16,
    pub bbp: u8,
    pub data: __IncompleteArrayField<::std::os::raw::c_uchar>,
}
#[test]
fn bindgen_test_layout_nspire_image() {
    assert_eq!(
        ::std::mem::size_of::<nspire_image>(),
        6usize,
        concat!("Size of: ", stringify!(nspire_image))
    );
    assert_eq!(
        ::std::mem::align_of::<nspire_image>(),
        2usize,
        concat!("Alignment of ", stringify!(nspire_image))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<nspire_image>())).width as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(nspire_image),
            "::",
            stringify!(width)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<nspire_image>())).height as *const _ as usize },
        2usize,
        concat!(
            "Offset of field: ",
            stringify!(nspire_image),
            "::",
            stringify!(height)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<nspire_image>())).bbp as *const _ as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(nspire_image),
            "::",
            stringify!(bbp)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<nspire_image>())).data as *const _ as usize },
        5usize,
        concat!(
            "Offset of field: ",
            stringify!(nspire_image),
            "::",
            stringify!(data)
        )
    );
}
extern "C" {
    pub fn nspire_screenshot(
        handle: *mut nspire_handle_t,
        ptr: *mut *mut nspire_image,
    ) -> ::std::os::raw::c_int;
}
